Fix some magnet links not working in webinterface plugin

BUG: 339584
REVIEW: 120808